syntax = "proto3";

option go_package = "tsuwari/nats/integrations";

message AddIntegration {
  string id = 1;
}

message RemoveIntegration {
  string id = 1;
}